# fastapi-checks

./: .envrc  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: .codecov.yml
.github/workflows/: ci.yaml  release.yaml
app_example/: __init__.py  main.py
app_example/routers/: resources.py
fastapi_checks/cli/: config.py  dash.py  main.py
fastapi_checks/cli/assets/: test.css
fastapi_checks/cli/commands/: debug.py  routes.py
fastapi_checks/decorators/: __init__.py  mark.py
fastapi_checks/models/: __init__.py  api_route.py  app.py  cli.py  dependency.py  mark.py  openapi.py  table.py  utils.py
fastapi_checks/parser/: api_route.py  app.py  callable.py  openapi.py
fastapi_checks/testing/: __init__.py  pytest_plugin.py
templates/: CHANGELOG.md.j2
tests/: conftest.py
tests/cli/: conftest.py  test_command_debug.py  test_command_routes.py  test_config.py  test_main.py
tests/cli/__snapshots__/: test_command_debug.ambr  test_command_routes.ambr  test_main.ambr
tests/cli/fixtures/: valid_config.json
tests/models/: test_api_route.py  test_app.py  test_dependency.py  test_mark.py
tests/parser/: test_api_route.py  test_app.py  test_callable.py  test_openapi.py
tests/testing/: test_pytest_plugin.py  test_runners.py
